[package]
name = "msql-srv"
version = "0.9.2"
edition = "2018"

description = "Bindings for emulating a MySQL/MariaDB server"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/msql-srv"
homepage = "https://github.com/jonhoo/msql-srv"
repository = "https://github.com/jonhoo/msql-srv.git"

keywords = ["api-bindings", "database", "sql", "mock"]
categories = ["api-bindings", "network-programming", "database-implementations"]

license = "MIT/Apache-2.0"

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "msql-srv", build = "27" }
codecov = { repository = "jonhoo/msql-srv", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
nom = "7"
mysql_common = { git = 'https://github.com/ovr/rust_mysql_common.git', rev = "865224470f973d5247d313fa890363d8fb9fc44e", features = ["chrono"] }
byteorder = "1.4"
chrono = "0.4"
tokio = { version = "1.0", features = ["io-util", "io-std"] }
async-trait = "0.1.40"
rand = "0.8.3"

[dev-dependencies]
# postgres = "0.19"
mysql = "21"
mysql_async = "0.20.0"
slab = "0.4.3"
tokio = { version = "1.0", features = ["full"] }
futures = "0.1.26"